--- a/ckanext/snap_theme/templates/package/read.html
+++ b/ckanext/snap_theme/templates/package/read.html
@@ -2,9 +2,17 @@
 {% block secondary_content %}
   {{ super() }}
 
+   <section class="module module-narrow">
+     <div class="module context-info">
+       <div class="module-content">
+         <h1 class="heading">{{ pkg.title or pkg.name }}</h1>
+       </div>
+     </div>
+   </section>
+
   {% set dataset_extent = h.get_pkg_dict_extra(c.pkg_dict, 'spatial', '') %}
   {% if dataset_extent %}
-    {% snippet "spatial/snippets/dataset_map_sidebar.html", extent=dataset_extent %}
+    {% snippet "spatial/snippets/snap_dataset_map_sidebar.html", extent=dataset_extent, temporal_start=c.pkg_dict.temporal_start, temporal_end=c.pkg_dict.temporal_end, spatial_resolution=c.pkg_dict.spatial_resolution  %}
   {% endif %}
 
 {% endblock %}
