attach JS and CSS resources, continue formatting package display

--- a/ckanext/snap_theme/templates/package/snippets/additional_info.html
+++ b/ckanext/snap_theme/templates/package/snippets/additional_info.html
@@ -1,5 +1,9 @@
 <section class="additional-info" style="padding-top: 2em">
-  <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#additional_info_wrapper">
+
+  {% resource 'snap/package.css' %}
+  {% resource 'snap/snap.js' %}
+
+  <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#additional_info_wrapper" id="additional_info_toggler">
     Show additional information about this dataset&hellip;
   </button>
  
