add thumbnail preview to main package display block

--- a/ckanext/snap_theme/templates/package/read.html
+++ b/ckanext/snap_theme/templates/package/read.html
@@ -1,4 +1,44 @@
 {% ckan_extends %}
+
+{% block primary_content_inner %}
+    {% block package_description %}
+        {% if pkg.private %}
+            <span class="dataset-private label label-inverse pull-right">
+                <i class="icon-lock"></i>
+                {{ _('Private') }}
+            </span>
+        {% endif %}
+        <h1>
+            {% block page_heading %}
+                {{ pkg.title or pkg.name }}
+                {% if pkg.state.startswith('draft') %}
+                    [{{ _('Draft') }}]
+                {% endif %}
+            {% endblock %}
+        </h1>
+        {% if pkg.url %}
+            <img src="{{ pkg.url }}/preview.png" />
+        {% endif %}
+        {% block package_notes %}
+            {% if c.pkg_notes_formatted %}
+            <div class="notes embedded-content">
+                {{ c.pkg_notes_formatted }}
+            </div>
+            {% endif %}
+        {% endblock %}
+    {% endblock %}
+
+    {% block package_resources %}
+        {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources %}
+    {% endblock %}
+    {% block package_tags %}
+        {% snippet "package/snippets/tags.html", tags=pkg.tags %}
+    {% endblock %}
+        {% block package_additional_info %}
+    {% snippet "package/snippets/additional_info.html", pkg_dict=pkg %}
+    {% endblock %}
+{% endblock %}
+
 {% block secondary_content %}
 
    <section class="module module-narrow">
