#28, remove hack to login

--- a/ckanext/snap_theme/templates/header.html
+++ b/ckanext/snap_theme/templates/header.html
@@ -7,3 +7,6 @@ with the Groups and Organization links removed #}
         ('about', _('About'))
     ) }}
 {% endblock %}
+
+{% block header_account_notlogged %}
+{% endblock %}
