--- a/ckanext/snap_theme/sass/ckan/_layout.scss
+++ b/ckanext/snap_theme/sass/ckan/_layout.scss
@@ -47,7 +47,7 @@
     [role=main],
     .main {
         padding-top: 10px;
-        background: $layoutBackgroundColor url("#{$bgPath}");
+        background: $layoutBackgroundColor;
     }
 }
 
