--- a/ckanext/snap_theme/templates/home/index.html
+++ b/ckanext/snap_theme/templates/home/index.html
@@ -7,7 +7,66 @@
 {% block toolbar %}{% endblock %}
 
 {% block content %}
-  <div class="home">
-    <div class="intro"></div>
+  <div class="container-fluid home">
+
+    <div class="row intro">
+      <div class="col-md-12">
+        <h1><em>AR</em>ctic <em>DA</em>ta <em>C</em>ollaborative</h1>
+        <h2>Curated datasets for Alaska and the Arctic.</h2>
+      </div>
+    </div>
+
+    <div class="row onramp categories">
+      <div class="col-md-12">
+        <h2>Categories</h2>
+        <h3>Explore our data through categories and tags.</h3>
+        <div class="categories--categories">
+          <div class="categories--category">
+            <img src="images/noun_climate_2731699.png" alt="Climate" />
+            <p>Climate</p>
+          </div>
+          <div class="categories--category">
+            <img src="images/noun_wildfire_1887962.png" alt="noun_wildfire_1887962.png" />
+            <p>Wildfire</p>
+          </div>
+          <div class="categories--category">
+            <img src="images/noun_sea ice_1028775.png" alt="Sea Ice" />
+            <p>Sea Ice</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row onramp showcases">
+      <div class="col-md-12">
+        <h2>Showcases</h2>
+        <h3>These showcases highlight interactive tools and visualizations built using data sets from ARDAC and other data sources.</h3>
+      </div>
+    </div>
+
+    <div class="row onramp home-groups">
+      <div class="col-md-12">
+        <h2>Groups</h2>
+        <h3>Curated groups of related data.</h3>
+        {% block group_list %}
+        <ul class="media-list">
+          {% block group_list_inner %}
+          {% for group in h.get_featured_groups(count=4) %}
+            {% snippet "group/snippets/group_item.html", group=group, position=loop.index %}
+          {% endfor %}
+          {% endblock %}
+        </ul>
+        {% endblock %}
+      </div>
+    </div>
+
+    <div class="row onramp organizations">
+      <div class="col-md-12">
+        <h2>Organizations</h2>
+        <h3>Curated groups of related data.</h3>
+      </div>
+    </div>
+
+
   </div>
 {% endblock %}
