--- a/ckanext/snap_theme/templates/home/index.html
+++ b/ckanext/snap_theme/templates/home/index.html
@@ -13,6 +13,7 @@
       <div class="col-md-12">
         <h1><em>AR</em>ctic <em>DA</em>ta <em>C</em>ollaborative</h1>
         <h2>Curated datasets for Alaska and the Arctic.</h2>
+        {% snippet "home/simple_search.html", placeholder="Search datasets..." %}
       </div>
     </div>
 
@@ -21,18 +22,18 @@
         <h2>Categories</h2>
         <h3>Explore our data through categories and tags.</h3>
         <div class="categories--categories">
-          <div class="categories--category">
+          <a href="{{ h.url_for(controller='package', action='search', tags=['climate', 'IEM']) }}" class="categories--category">
             <img src="images/noun_climate_2731699.png" alt="Climate" />
             <p>Climate</p>
-          </div>
-          <div class="categories--category">
+          </a>
+          <a href="{{ h.url_for(controller='package', action='search', tags=['fire+scar', 'burn+severity']) }}" class="categories--category">
             <img src="images/noun_wildfire_1887962.png" alt="noun_wildfire_1887962.png" />
             <p>Wildfire</p>
-          </div>
-          <div class="categories--category">
+          </a>
+          <a href="" class="categories--category">
             <img src="images/noun_sea ice_1028775.png" alt="Sea Ice" />
             <p>Sea Ice</p>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -41,29 +42,35 @@
       <div class="col-md-12">
         <h2>Showcases</h2>
         <h3>These showcases highlight interactive tools and visualizations built using data sets from ARDAC and other data sources.</h3>
+        <ul>
+          {% for package in h.snap_theme_get_showcases() %}
+            {% snippet "home/showcase.html", package=package, position=loop.index %}
+          {% endfor %}
+        </ul>
       </div>
     </div>
 
     <div class="row onramp home-groups">
       <div class="col-md-12">
         <h2>Groups</h2>
-        <h3>Curated groups of related data.</h3>
-        {% block group_list %}
+        <h3>Browse by groups of data related by theme or project.</h3>
         <ul class="media-list">
-          {% block group_list_inner %}
           {% for group in h.get_featured_groups(count=4) %}
             {% snippet "group/snippets/group_item.html", group=group, position=loop.index %}
           {% endfor %}
-          {% endblock %}
         </ul>
-        {% endblock %}
       </div>
     </div>
 
-    <div class="row onramp organizations">
+    <div class="row onramp home-organizations">
       <div class="col-md-12">
         <h2>Organizations</h2>
-        <h3>Curated groups of related data.</h3>
+        <h3>Find data belonging to a particular organization.</h3>
+        <ul>
+          {% for organization in h.get_featured_organizations(count=4) %}
+            {% snippet "home/organization.html", organization=organization, position=loop.index %}
+          {% endfor %}
+        </ul>
       </div>
     </div>
 
