Interim commit with all major functional blocks in home page working

--- a/ckanext/snap_theme/public/main.css
+++ b/ckanext/snap_theme/public/main.css
@@ -12999,39 +12999,57 @@ iframe {
   background-color: rgba(255, 255, 255, 0.75);
   padding: 1em;
 }
-/* line 107, ../sass/snap/_home.scss */
+/* line 104, ../sass/snap/_home.scss */
+.home .showcases.onramp ul {
+  list-style-type: none;
+  width: 74vw;
+  margin: 1rem auto;
+}
+/* line 108, ../sass/snap/_home.scss */
+.home .showcases.onramp ul li {
+  width: 30vw;
+  padding: 1vw;
+  margin: 2vw;
+}
+/* line 112, ../sass/snap/_home.scss */
+.home .showcases.onramp ul li h3 {
+  width: auto;
+  margin: 1em;
+  padding: 0;
+}
+/* line 123, ../sass/snap/_home.scss */
 .home .home-groups .media-list {
   width: 50em;
   margin: 2rem auto;
 }
-/* line 110, ../sass/snap/_home.scss */
+/* line 126, ../sass/snap/_home.scss */
 .home .home-groups .media-list li {
   padding: 1rem;
 }
-/* line 112, ../sass/snap/_home.scss */
+/* line 128, ../sass/snap/_home.scss */
 .home .home-groups .media-list li:hover {
   background-color: #e6e6e6;
 }
-/* line 115, ../sass/snap/_home.scss */
+/* line 131, ../sass/snap/_home.scss */
 .home .home-groups .media-list li a {
   color: #333333;
 }
-/* line 117, ../sass/snap/_home.scss */
+/* line 133, ../sass/snap/_home.scss */
 .home .home-groups .media-list li a h4 {
   font-weight: bold;
   margin-top: 0;
 }
-/* line 121, ../sass/snap/_home.scss */
+/* line 137, ../sass/snap/_home.scss */
 .home .home-groups .media-list li a img.media-object {
   width: 20rem;
 }
-/* line 130, ../sass/snap/_home.scss */
+/* line 146, ../sass/snap/_home.scss */
 .home .home-organizations ul {
   width: 40em;
   margin: 2rem auto;
   padding: 0;
 }
-/* line 134, ../sass/snap/_home.scss */
+/* line 150, ../sass/snap/_home.scss */
 .home .home-organizations ul li.media-item {
   height: 28rem;
   display: inline-block;
@@ -13040,17 +13058,17 @@ iframe {
   padding: 2rem;
   width: 25rem;
 }
-/* line 141, ../sass/snap/_home.scss */
+/* line 157, ../sass/snap/_home.scss */
 .home .home-organizations ul li.media-item h3 {
   width: auto;
   text-align: left;
   margin: 1rem auto 1rem;
 }
-/* line 146, ../sass/snap/_home.scss */
+/* line 162, ../sass/snap/_home.scss */
 .home .home-organizations ul li.media-item:hover {
   background-color: #e6e6e6;
 }
-/* line 149, ../sass/snap/_home.scss */
+/* line 165, ../sass/snap/_home.scss */
 .home .home-organizations ul li.media-item img {
   max-height: 10rem;
 }
