--- a/ckanext/snap_theme/sass/snap/_variables.scss
+++ b/ckanext/snap_theme/sass/snap/_variables.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web&display=swap');
 
-$font-family-sans-serif: 'Raleway', sans-serif;
-$font-family-base: 'Raleway', sans-serif;
+$headings-font-family: 'Open Sans', sans-serif;
+$font-family-base: 'Titillium Web', sans-serif;
 $layoutBackgroundColor: #fff;
+$font-size-base: 16px;
