--- a/ckanext/snap_theme/templates/base.html
+++ b/ckanext/snap_theme/templates/base.html
@@ -5,6 +5,5 @@
 {% endblock %}
 
 {% block styles %}
-  {{ super() }}
-  <link rel="stylesheet" href="/main.css" />
+  {% resource 'snap/main.css' %}
 {% endblock %}
